--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="#">LINK</a>
     <div id="plate" ></div>
     <div id="cursor">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80.25 119.61" width="128px" height="128px"><g id="huevos-crack"><path id="egg-top" d="M77.32,68.56C74.54,96.05,59,117.11,40.12,117.11,19.34,117.11,2.5,91.45,2.5,59.8c0-1.49,0-3,.11-4.43L17.36,71.45,32.75,52.36,48,71.45,63,52.36Z" style="fill:#fff;stroke:#1d1d1b;stroke-miterlimit:10;stroke-width:5px"/><path id="egg-btm" d="M77.75,59.8c0,3-.15,5.9-.43,8.76L63,52.36,48,71.45,32.75,52.36,17.36,71.45,2.61,55.37C4.09,25.79,20.32,2.5,40.12,2.5,60.9,2.5,77.75,28.15,77.75,59.8Z" style="fill:#fff;stroke:#1d1d1b;stroke-miterlimit:10;stroke-width:5px"/></g></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256" width="256px" height="256px"><g id="huevos-crack"><rect width="256" height="256" style="fill:none"/><path id="egg-top" d="M165.19,136.75c-2.77,27.5-18.37,48.56-37.2,48.56-20.78,0-37.61-25.67-37.61-57.31,0-1.5,0-3,.1-4.44l14.75,16.08,15.39-19.08,15.2,19.08,15-19.08Z" style="fill:#fff;stroke:#1d1d1b;stroke-miterlimit:10;stroke-width:5px"/><path id="egg-btm" d="M165.62,128c0,3-.15,5.89-.43,8.75l-14.35-16.19-15,19.08-15.2-19.08-15.39,19.08L90.48,123.56C92,94,108.19,70.69,128,70.69,148.77,70.69,165.62,96.35,165.62,128Z" style="fill:#fff;stroke:#1d1d1b;stroke-miterlimit:10;stroke-width:5px"/></g></svg>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
     <script src="main.js"></script>
